@@ -397,6 +397,12 @@ incremental = $dup_incremental
 #keep = yes
 keep = $dup_keep
 
+# full destination URL, in duplicity format; if set, desturl overrides
+# sshoptions, destdir, desthost and destuser, and disables testconnect
+# For details, see duplicity manpage, section "URL FORMAT".
+#desturl = file:///usr/local/backup
+#desturl = rsync://user@other.host//var/backup/bla
+
 # bandwith limit, in kbit/s ; default is 0, i.e. no limit
 #bandwidthlimit = 128
 bandwidthlimit = $dup_bandwidth
