@@ -12,6 +12,8 @@ version 0.9.6 -- unreleased
 	   only trigger a warning on failure, since they should not stop backups
 	   from being done. Also migrated full/incremental backup switch to the
 	   new syntax.
+	 . Support every duplicity-supported transport with new configuration
+	   option desturl (Closes: #483712, #346040, Trac#2).
 	ldap:
 	 . support HDB backend just as the BDB one, and make message clearer
 	   when no supported backend is found (Closes: #476910)
